#631 fix: alignment of non-icon button text

--- a/santa-fe/src/app/modules/core/components/security-action-menu/security-action-menu.component.scss
+++ b/santa-fe/src/app/modules/core/components/security-action-menu/security-action-menu.component.scss
@@ -46,16 +46,17 @@ $circleAlignment: $circleWidth / 2 + $spacing_x_small;
       @include mix_alive('light');
       &--noIcon {
         & > span {
+          display: flex;
+          align-items: center;
+          justify-content: center;
           opacity: 1;
           font-size: $font_size_x_small;
-          bottom: 0;
-          top: 50%;
-          transform: translateY(-50%);
+          bottom: auto;
         }
         &:hover,
         &:focus {
           .sat-securityActionMenu__content-subActionBtn-text {
-            transform: translate(0,0) !important;
+            transform: translate(0,0);
           }
         }
       }
